fix: footer alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,7 +93,7 @@ text-align: left;
   background-color: transparent!important;
   color: #0A004C!important;
   font-size: 16px!important;
-  line-height: 31,25px;
+  line-height: 20.83px!important;
   text-align: center!important;
   padding: 0px!important;
   border: none!important;
